derp correct that vertical alignment mixin

--- a/app/styles/_variables_mixins.scss
+++ b/app/styles/_variables_mixins.scss
@@ -26,7 +26,7 @@ $gray:                  rgba($navy,.65);
 @mixin vertically_centered {
   position: relative;
   top: 50%;
-  margin-top: -50%;
+  transform: translateY(-50%)
 }
 
 @mixin transition($value) {
